--- a/uus_leht.html
+++ b/uus_leht.html
@@ -3,12 +3,13 @@
 
 <head>
     <title>Korrutustabel</title>
+    <link rel="stylesheet" href="style.css"/>
 </head>
 
 <body>
 
     <div>
-        <p>Siin lehel on korrutustabel ühest kolmeni</p>
+        <p class="title2">Siin lehel on korrutustabel ühest kolmeni</p>
         <table>
             <tr>
                 <th></th>
